# noteshrink

./: .clang-format  CMakeLists.txt
include/: noteshrink.h
src/: noteshrink.cpp
test/: test.cpp
